--- a/template/diploma.html
+++ b/template/diploma.html
@@ -2,15 +2,17 @@
 
 {% block content %}
     <center><a href="https://imgbb.com/"><img src="https://i.ibb.co/HFV9CPt/Logo3.png" alt="Logo" border="0" width="100" height="100" vspace="25" hspace="25"></a></center>
-    <h1 align="center">Is the diploma blockchain corrupted?!</h1><br>
+    <h1 align="center">Is the diploma genuine?</h1><br>
+        {% for res in results %}
+            <div class="results" >
+                <h1 align="center"><strong style="color: blue;">{{res}}</strong></h1><br>
+            </div>
+        {% endfor %}
     <p align="justify"> Some explanation about the different states of the blocks and how we verify the blocks.</p>
 
-    {% for res in results %}
-        <div class="results" >
-            <center>Block {{res['block']}} is <u>{{res['result']}}</u>.</center>
-        </div>
-    {% endfor %}
-
+    <form action="{{url_for('check_graduate')}}" method="GET">
+        <center><button type="submit" class="btn btn-success">Verify another diploma</button></center>
+    </form>
     <br>
     <form action="{{url_for('index')}}" method="GET">
         <center><button type="submit" class="btn btn-secondary">Go back to home menu</button></center>
