--- a/template/checkgraduate.html
+++ b/template/checkgraduate.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-    <center><a href="https://imgbb.com/"><img src="https://i.ibb.co/HFV9CPt/Logo3.png" alt="Logo" border="0" width="100" height="100" vspace="25" hspace="25"></a></center>
+    <center><a href="https://imgbb.com/"><img src="https://i.ibb.co/sKVV03b/Picture1.png" alt="Logo" border="0" width="100" height="100" vspace="25" hspace="25"></a></center>
     <h1 align="center">Check a Diploma.</h1><br>
     {% for res in feedback %}
         <div class="feedback" >
