--- a/template/index.html
+++ b/template/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <center><a href="https://imgbb.com/"><img src="https://i.ibb.co/HFV9CPt/Logo3.png" alt="Logo" border="0" width="100" height="100" vspace="25" hspace="25"></a></center>
+    <center><a href="https://imgbb.com/"><img src="https://i.ibb.co/sKVV03b/Picture1.png" alt="Logo" border="0" width="100" height="100" vspace="25" hspace="25"></a></center>
     <h1 align="center">Welcome to the newest HSG diploma verification system!</h1><br>
     <p align="justify"> We have developed a revolutionary diploma verification sytem: a simple blockchain implementation in the form of a decentralized app (dAPP)
     that allows the university to add graduates to the diploma blockchain, and prospective universities or employees to verify if someone genuinely has graduated from HSG.
