remember study program

--- a/template/checkgraduate.html
+++ b/template/checkgraduate.html
@@ -39,7 +39,7 @@
         <div class="form_group">
           <label for="SubjectOfStudy">Study program:</label>
               <select class="custom-select my-1 mr-sm-2" id="SubjectOfStudy" name="subject" >
-                <option selected>Choose...</option>
+                <option selected value="{{subject}}">{{subject}}</option>
                 <option value="Bachelor in Business Administration">Bachelor in Business Administration</option>
                 <option value="Bachelor in Economics">Bachelor in Economics</option>
                 <option value="Bachelor in International Affairs">Bachelor in International Affairs</option>
