--- a/template/addgraduate.html
+++ b/template/addgraduate.html
@@ -11,8 +11,8 @@
             <br>
         </div>
     {% endfor %}
-    <p align="justify"> Using the HSG diploma verification system is easy: Just enter the name of the student (Graduate),
-        his/her date of birth, study subject and date of graduation.</p>
+    <p align="justify"> Using the HSG diploma verification system is easy: To add a new diploma to the blockchain just enter
+    the name of the student (graduate), his/her date of birth, study subject and date of graduation. </p>
 
     <form action="{{url_for('add_graduate')}}" method ="POST">
         <div class="form_group">
