--- a/template/checkgraduate.html
+++ b/template/checkgraduate.html
@@ -11,7 +11,9 @@
             <br>
         </div>
     {% endfor %}
-    <p align="justify"> Some explanation about the different states of the blocks and how we verify the blocks.</p>
+    <p align="justify"> The HSG diploma verification system allows universities, potential employers and other interested parties
+    to verify individual diplomas. Just enter the graduate's name, his/her date of birth, study programme and date of graduation.
+    The verification system will then check whether it's consistent with an existing block.</p>
 
 <form action="{{url_for('check_graduate')}}" method ="POST">
         <div class="form_group">
