--- a/template/verification.html
+++ b/template/verification.html
@@ -3,7 +3,8 @@
 {% block content %}
     <center><a href="https://imgbb.com/"><img src="https://i.ibb.co/sKVV03b/Picture1.png" alt="Logo" border="0" width="100" height="100" vspace="25" hspace="25"></a></center>
     <h1 align="center">Is the diploma blockchain corrupted?!</h1><br>
-    <p align="justify"> Some explanation about the different states of the blocks and how we verify the blocks.</p>
+    <p align="justify"> The HSG verification system also allows you to verify the whole blockchain regarding its validity. A diploma
+        (block) can either be genuine, corrupt or unverifiable in case it is the last block. </p>
 
     {% for res in results %}
         <div class="results" >
