--- a/template/checkgraduate.html
+++ b/template/checkgraduate.html
@@ -5,12 +5,10 @@
 
     <center><a href="https://imgbb.com/"><img src="https://i.ibb.co/sKVV03b/Picture1.png" alt="Logo" border="0" width="100" height="100" vspace="25" hspace="25"></a></center>
     <h1 align="center">Check a Diploma.</h1><br>
-    {% for res in feedback %}
         <div class="feedback" >
-            <center><strong style="color: red;">{{res}}</strong></center>
+            <center><strong style="color: red;">{{ feedback }}</strong></center>
             <br>
         </div>
-    {% endfor %}
     <p align="justify"> Some explanation about the different states of the blocks and how we verify the blocks.</p>
 
 <form action="{{url_for('check_graduate')}}" method ="POST">
