--- a/template/base.html
+++ b/template/base.html
@@ -1,3 +1,5 @@
+#HTML code for general information of website and import of Bootstrap library for creating layout via CSS
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
