--- a/template/index.html
+++ b/template/index.html
@@ -1,4 +1,4 @@
-<!html code for first page with the main menu, which contains buttons to be redirected to other three pages. We added a logo and a short descirption>
+#html code for first page with the main menu, which contains buttons to be redirected to other three pages. We added a logo and a short descirption
 {% extends 'base.html' %}
 
 {% block content %}
