--- a/template/checkgraduate.html
+++ b/template/checkgraduate.html
@@ -1,3 +1,4 @@
+#HTML code for second page, which enables user to check if a specific HSG-diploma exists. Main feature of page is again a form, which the user can fill out. The input of this form are linked to the function chech_graduate() in main.py. As before we used Bootstrap features to improve the form.  
 {% extends 'base.html' %}
 
 {% block content %}
