--- a/template/addgraduate.html
+++ b/template/addgraduate.html
@@ -1,4 +1,4 @@
-#First functional page "Add a graduate", which contains a form that is linked to the add.graduate() function in main.py. We used some Boostrap features to improve the form and have drop-down menus to control for users input 
+<!First functional page "Add a graduate", which contains a form that is linked to the add.graduate() function in main.py. We used some Boostrap features to improve the form and have drop-down menus to control for users input> 
 
 {% extends 'base.html' %}
 
