--- a/template/diploma.html
+++ b/template/diploma.html
@@ -1,4 +1,4 @@
-#HTML code for result page of function check_graduate(). User will be redirected to this page after pressing button "Verify diploma" on page checkgraduate.html. 
+<!HTML code for result page of function check_graduate(). User will be redirected to this page after pressing button "Verify diploma" on page checkgraduate.html> 
 {% extends 'base.html' %}
 
 {% block content %}
