--- a/template/verification.html
+++ b/template/verification.html
@@ -1,4 +1,4 @@
-#HTML code for results of function verification() in main.py. Users will be directed to this page directly after clicking on the main page (index.html) the button "Click here to verify the entire blockchain"
+<!HTML code for results of function verification() in main.py. Users will be directed to this page directly after clicking on the main page (index.html) the button "Click here to verify the entire blockchain">
 {% extends 'base.html' %}
 
 {% block content %}
