--- a/template/addgraduate.html
+++ b/template/addgraduate.html
@@ -1,4 +1,5 @@
-<!First functional page "Add a graduate", which contains a form that is linked to the add.graduate() function in main.py. We used some Boostrap features to improve the form and have drop-down menus to control for users input> 
+<!First functional page "Add a graduate", which contains a form that is linked to the add_graduate() function in main.py.
+We used some Bootstrap features to improve the form and have drop-down menus to control for users input.>
 
 {% extends 'base.html' %}
 
@@ -20,7 +21,9 @@
             Only authorized personnel from the University of St.Gallen can add graduates to the blockchain. Input the university key here.
            </small>
         </div>
-       &nbsp;&nbsp;
+
+        <br>
+
         <div class="form_group">
            <label for="InputPayer">Graduate name: </label>
            <input type="text" class="form-control" id="InputPayer" placeholder="Name of graduate" name="name" value="{{ name }}">
@@ -28,13 +31,14 @@
             Please input the name of the person who has graduated.
            </small>
         </div>
-        &nbsp;&nbsp;
+
+        <br>
 
        <div class="form_group">
             <label for="InputDayOfBirth">Date of birth: </label>
             <input class="custom-select my-1 mr-sm-2" type="date" id="InputDayOfBirth" name="birthday"
                value="{{ birthday }}"
-               min="1930-01-01" max="2019-12-31">
+               min="1930-01-01" max="2020-02-14">
            <small id="InputDayOfBirthHelpText" class="form-text text-muted">
             Please input the date of birth here (dd/mm/yyyy).
            </small>
@@ -54,7 +58,7 @@
                   <option value="Master in Business Innovation">Master in Business Innovation</option>
                   <option value="Master in Marketing Management">Master in Marketing Management</option>
                   <option value="Master in Accounting and Finance">Master in Accounting and Finance</option>
-                  <option value="Master in Strategy and International Management">Master in Strategy and International Management</option>
+                  <option value="Master in Strategy and International Management (SIM)">Master in Strategy and International Management</option>
                   <option value="Master in Business Management">Master in Business Management</option>
                   <option value="Master in Banking and Finance">Master in Banking and Finance</option>
                   <option value="Master in Economics">Master in Economics</option>
@@ -75,7 +79,7 @@
             <label for="InputDayOfBirth">Date of graduation: </label>
             <input class="custom-select my-1 mr-sm-2" type="date" id="InputDayOfGraduation" name="graduation"
               value="{{ graduation }}"
-               min="2000-01-01" max="2019-12-31">
+               min="2000-01-01" max="2020-02-14">
            <small id="InputDayOfGraduationHelpText" class="form-text text-muted">
             Please input the date of graduation here (dd/mm/yyyy).
            </small>
@@ -91,7 +95,4 @@
         <center><button type="submit" class="btn btn-secondary">Go back to home menu</button></center>
     </form>
     <br>
-    <br>
-
-
 {% endblock %}
