--- a/template/verification.html
+++ b/template/verification.html
@@ -11,7 +11,7 @@ clicking on the main page (index.html) the button "Click here to verify the enti
 
     {% for res in results %}
         <div class="results" >
-            <center>Block {{res['block']}} is <u>{{res['result']}}</u>.</center>
+            <center><u>{{res}}</u></center>
         </div>
     {% endfor %}
 
